# api/openapi.yml
@@ -44,8 +44,8 @@ paths:
     get:
       tags:
         - bookstore
-      summary: "著者&書籍リストの取得"
-      description: "登録されているすべての著者と書籍のリストを取得します"
+      summary: "著者で書籍を検索する"
+      description: "著者名を指定して、著者と紐づく書籍情報を取得します。"
       parameters:
         -  in: query
            name: authorName
@@ -82,7 +82,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AuthorRequest'
+              $ref: '#/components/schemas/AuthorNameRequest'
       responses:
         '200':
           description: 取得成功
@@ -148,8 +148,6 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
-        '409':
-          $ref: '#/components/responses/Conflict'
         'default':
           $ref: '#/components/responses/InternalServerError'
     delete:
@@ -213,7 +211,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AuthorRequest'
+              $ref: '#/components/schemas/AuthorNameRequest'
       responses:
         '204':    # status code
           description: Success operation
@@ -293,10 +291,6 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/Author'
-    BookAuthorSetList:
-      type: array
-      items:
-        $ref: '#/components/schemas/BookAuthorSet'
     BookAuthorSet:
       type: object
       properties:
@@ -335,7 +329,7 @@ components:
       properties:
         book_name:
           type: string
-    AuthorRequest:
+    AuthorNameRequest:
       type: object
       properties:
         author_name:
